--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "react-dom": "^18.3.1"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.20",
     "eslint": "^8",
-    "eslint-config-next": "14.2.5"
+    "eslint-config-next": "14.2.5",
+    "postcss": "^8.4.40",
+    "tailwindcss": "^3.4.7"
   }
 }
